elaborate on current (job) interests

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Claus Reinke</title>
 
   <style type="text/css">
-  .site  { padding: 1%; height: 48%; width: 48%; float: left }
+  .site  { padding: 1%; width: 48%; float: left }
   .clear { clear: both }
   </style>
 
@@ -40,6 +40,28 @@ logic programming can be supported reasonably well as embedded DSLs,
 while concurrent programming needs language support, and functional
 programming without good functional abstraction is just painful.
 </p>
+<p>
+On a purely technical basis, I have been tempted to stick with Haskell,
+helping to address its remaining shortcomings. The problem is that this
+ignores social rationales, in particular, what I would call momentum: so
+many developers have been using Java and Php that their needs have
+driven the development of frameworks and tools to ease some of the
+technical disadvantages of the language (the proliferation of frameworks
+has its own disadvantages, but I am sometimes envious of Java's Eclipse
+community). However, there is a storm brewing here, with Javascript
+having the potential to reach more developers than Java or Php ever had
+-- and its momentum is building rapidly. Javascript is not without
+problems, but it is surprising what one can achieve by focussing on the
+good parts of the language.
+</p>
+<p>
+It remains to be seen what can be done in terms of improving or
+scaffolding the Javascript language, but this is where I would like to
+focus my efforts in the immediate future. So, if you are looking for a
+Javascript coder with my <a
+href="http://libraryinstitute.wordpress.com/about/">background</a> and
+interests, please <a href="https://github.com/clausreinke">get in
+touch</a>.  </p>
 <p>
 My web home is rather distributed these days, so this is
 currently more of a sites map than a home page:
