add js-tools information

--- a/index.html
+++ b/index.html
@@ -71,6 +71,13 @@ and <a href="http://community.haskell.org/~claus/talks/">talks</a>
 are available online, as well.
 </div>
 
+<div class="site" id="js-tools">
+I help managing <a
+href="http://groups.google.com/group/js-tools/about">js-tools</a>, the new
+mailing list for Javascript tool developers, and its <a
+href="http://clausreinke.github.com/js-tools/">list of resources</a>.
+</div>
+
 </div>
 
 <article id="interests">
@@ -113,16 +120,18 @@ functional, object-oriented, and aspect-oriented programming. Its main
 problems are a syntax and APIs that hamper extensive use of functional
 programming, semantics and APIs that hamper equational reasoning, and an
 inertia (the flip side of momentum) that hampers attempts to change the
-language (none of which are helpful when loooking at concurrency support).
+language (none of which are helpful when looking at concurrency support).
 </p>
 <p>
 It remains to be seen what can be done in terms of improving the Javascript
 language or scaffolding it with tool support, but this is where I would like to
 focus my efforts in the immediate future. So, if you are looking for a
-Javascript coder with my <a
+Javascript coder and tool developer with my <a
 href="http://libraryinstitute.wordpress.com/about/">background</a> and
 interests, please <a href="https://github.com/clausreinke">get in
-touch</a>.
+touch</a>. If you are developing Javascript tools yourself, or want to stay up
+to date in that area, you want to check out our new <a
+href="http://groups.google.com/group/js-tools/about">js-tools</a> group.
 </p>
 </article>
 <p>
