emphasize recent Javascript focus

--- a/index.html
+++ b/index.html
@@ -35,11 +35,21 @@ currently more of a sites map than a home page:
 <div class="site">
 <em>Recent projects</em> are likely to appear on <a
 href="https://github.com/clausreinke">my Github account</a>.
-This is going to include my <em>Javascript projects</em>.
+Currently, these tend to be <em>Javascript projects</em>,
+such as <a href="https://github.com/clausreinke/estr">estr</a>
+(code traversal, navigation, transformation;
+<a href="http://clausreinke.github.com/estr">online demo</a>).
+</div>
+
+<div class="site" id="js-tools">
+I help managing <a
+href="http://groups.google.com/group/js-tools/about">js-tools</a>, the new
+mailing list for Javascript tool developers, and its <a
+href="http://clausreinke.github.com/js-tools/resources.html">list of resources</a>.
 </div>
 
 <div class="site" id="haskell">
-If you are looking for my <em>Haskell projects</em>, you'll find most of them via
+If you are looking for my old <em>Haskell projects</em>, you'll find most of them via
 <a href="http://community.haskell.org/~claus/">my Haskell Community
 page</a>. I also have a <a
 href="http://www.haskellers.com/user/claus/">Haskellers profile</a>.
@@ -69,13 +79,6 @@ Many of my older <a
 href="http://community.haskell.org/~claus/publications/">publications</a>
 and <a href="http://community.haskell.org/~claus/talks/">talks</a>
 are available online, as well.
-</div>
-
-<div class="site" id="js-tools">
-I help managing <a
-href="http://groups.google.com/group/js-tools/about">js-tools</a>, the new
-mailing list for Javascript tool developers, and its <a
-href="http://clausreinke.github.com/js-tools/">list of resources</a>.
 </div>
 
 </div>
