--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <body>
     <header>
     [<a href="https://github.com/clausreinke">Github Projects</a>]
-    [<a href="http://community.haskell.org/~claus/">Haskell Projects</a>]
-    [<a href="http://www.haskellers.com/user/claus/">Haskellers.com profile</a>]
     [<a href="http://libraryinstitute.wordpress.com/">Blog</a>]
     [<a href="http://www.youtube.com/user/whycombinator">Screencasts</a>]
+    [<a href="http://community.haskell.org/~claus/">Haskell Projects</a>]
+    [<a href="http://www.haskellers.com/user/claus/">Haskellers.com profile</a>]
     [<a href="http://community.haskell.org/~claus/publications/">Publications</a>]
     [<a href="http://community.haskell.org/~claus/talks/">Talks</a>]
+    <em title="Germany, or teleworking">(available for work)</em>
     </header>
 
 <div id="content">
@@ -29,23 +30,31 @@
 <div id="sites">
 <div id="intro" class="clear">
 My web home is rather distributed these days, so this is
-currently more of a sites map than a home page:
+part sites map, part home page:
 </div>
 
 <div class="site">
 <em>Recent projects</em> are likely to appear on <a
 href="https://github.com/clausreinke">my Github account</a>.
 Currently, these tend to be <em>Javascript projects</em>,
-such as <a href="https://github.com/clausreinke/estr">estr</a>
+such as <strong><a href="https://github.com/clausreinke/estr">estr</a></strong>
 (code traversal, navigation, transformation;
 <a href="http://clausreinke.github.com/estr">online demo</a>).
 </div>
 
 <div class="site" id="js-tools">
-I help managing <a
-href="http://groups.google.com/group/js-tools/about">js-tools</a>, the new
-mailing list for Javascript tool developers, and its <a
-href="http://clausreinke.github.com/js-tools/resources.html">list of resources</a>.
+I help to manage <strong><a
+href="http://groups.google.com/group/js-tools/about">js-tools</a></strong>, the 
+mailing list for Javascript tool developers, and curate the <strong><a
+href="http://clausreinke.github.com/js-tools/resources.html">js-tools resources</a></strong>.
+</div>
+
+<div class="site" id="typescript-tools">
+I have started work on <strong><a
+href="https://github.com/clausreinke/typescript-tools">typescript-tools</a></strong>, a
+commandline server and Vim plugin for using <a
+href="http://www.typescriptlang.org/">TypeScript</a> Language Services (types,
+jump-to-definition, completion, compiler errors).
 </div>
 
 <div class="site" id="haskell">
@@ -85,15 +94,22 @@ are available online, as well.
 
 <article id="interests">
 <p>
-My interests evolve around <strong>(declarative) programming
-languages</strong>: <em>language design and implementation</em>,
-<em>tool development</em>, and <em>programming techniques</em>.  Having
-looked into most of the major programming paradigms, I've more or less
-settled on a <em>combination of functional and concurrent programming</em> as
-the main paradigms I like to see supported well, directly in the language
-design. Occasionally, logic and object-oriented programming also come in
-handy as programming paradigms, but language designs built solely around
-these two tend to be less helpful for general programming.
+<strong>I am a software toolsmith</strong>. I enjoy writing software that helps
+turning computers into useful tools, with a particular focus on writing tools
+for other software developers - development tools. I have worked with
+Javascript/TypeScript, Haskell, and lots of other programming languages,
+starting from way before there was a web.
+</p>
+<p>
+My interests evolve around <em>(declarative) programming languages</em>:
+<strong>language design and implementation</strong>, <strong>tool
+development</strong>, and <strong>programming techniques</strong>.  Having
+looked into most of the major programming paradigms, I've more or less settled
+on a <em>combination of functional and concurrent programming</em> as the main
+paradigms I like to see supported well, directly in the language design.
+Occasionally, logic and object-oriented programming also come in handy as
+programming paradigms, but language designs built solely around these two tend
+to be less helpful for general programming.
 </p>
 <p>
 If this sounds odd to you, consider <em>embedded domain-specific languages
@@ -110,11 +126,10 @@ helping to address its remaining shortcomings. The problem is that this
 ignores social rationales, in particular, what I would call momentum: so
 many developers have been using Java and Php that their needs have
 driven the development of frameworks and tools to ease some of the
-technical disadvantages of the language (the proliferation of frameworks
-has its own disadvantages, but I am sometimes envious of Java's Eclipse
-community). However, there is a storm brewing here, with <em>Javascript</em>
-having the potential to reach more developers than Java or Php ever had
--- and its momentum is building rapidly.
+technical disadvantages of the language (the proliferation of frameworks and
+complexity of tools have their own disadvantages). However, there is a storm
+brewing here, with <em>Javascript</em> having the potential to reach more
+developers than Java or Php ever had -- and its momentum is building rapidly.
 </p>
 <p>
 Javascript is not without problems, but it is surprising what one can achieve
@@ -127,13 +142,15 @@ language (none of which are helpful when looking at concurrency support).
 </p>
 <p>
 It remains to be seen what can be done in terms of improving the Javascript
-language or scaffolding it with tool support, but this is where I would like to
-focus my efforts in the immediate future. So, if you are looking for a
-Javascript coder and tool developer with my <a
+language or scaffolding it with tool support (<a
+href="http://clausreinke.github.com/js-tools/resources.html#group:language-extensions">ES6
+modules and classes, as well as types can be supported by transpilers</a>), but
+this is where I would like to focus my efforts in the immediate future. So, <strong>if
+you are looking for a Javascript coder and tool developer with my <a
 href="http://libraryinstitute.wordpress.com/about/">background</a> and
-interests, please <a href="https://github.com/clausreinke">get in
-touch</a>. If you are developing Javascript tools yourself, or want to stay up
-to date in that area, you want to check out our new <a
+interests, please <a href="https://github.com/clausreinke">get in touch</a></strong>. If
+you are developing Javascript tools yourself, or want to stay up to date in
+that area, you want to check out our new <a
 href="http://groups.google.com/group/js-tools/about">js-tools</a> group.
 </p>
 </article>
