--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
   <style type="text/css">
   #sites { padding: 1%; width: 20%; float: left; font-size: smaller }
+  #old   { padding: 1%; width: 20%; float: right; font-size: smaller }
   .site  { margin-bottom: 1em }
   #intro { margin-bottom: 1em }
   .clear { clear: both }
@@ -15,14 +16,20 @@
 
 <body>
     <header>
-    [<a href="https://github.com/clausreinke">Github Projects</a>]
-    [<a href="http://libraryinstitute.wordpress.com/">Blog</a>]
-    [<a href="http://www.youtube.com/user/whycombinator">Screencasts</a>]
+    <span id="old">
+    <em>older resources:</em>
     [<a href="http://community.haskell.org/~claus/">Haskell Projects</a>]
     [<a href="http://www.haskellers.com/user/claus/">Haskellers.com profile</a>]
     [<a href="http://community.haskell.org/~claus/publications/">Publications</a>]
     [<a href="http://community.haskell.org/~claus/talks/">Talks</a>]
-    <em title="Germany, or teleworking">(available for work)</em>
+    </span>
+    <span id="new">
+    [<a href="https://github.com/clausreinke">Github Projects</a>]
+    [<a href="http://libraryinstitute.wordpress.com/">Blog</a>]
+    [<a href="http://www.youtube.com/user/whycombinator">Screencasts</a>]
+    [<a href="https://twitter.com/clausreinke">twitter</a>]
+    <em>(available for work in Germany, or remotely)</em>
+    </span>
     </header>
 
 <div id="content">
@@ -42,11 +49,11 @@ such as <strong><a href="https://github.com/clausreinke/estr">estr</a></strong>
 <a href="http://clausreinke.github.com/estr">online demo</a>).
 </div>
 
-<div class="site" id="js-tools">
-I help to manage <strong><a
-href="http://groups.google.com/group/js-tools/about">js-tools</a></strong>, the 
-mailing list for Javascript tool developers, and curate the <strong><a
-href="http://clausreinke.github.com/js-tools/resources.html">js-tools resources</a></strong>.
+<div class="site" id="ternjs">
+I have been helping out with the Vim plugin for <a
+href="https://github.com/marijnh/tern">Tern</a>, a Javascript analyser for
+intelligent Javascript editing support (types, jump-to-definition, completion,
+documentation lookup, find-references).
 </div>
 
 <div class="site" id="typescript-tools">
@@ -57,18 +64,24 @@ href="http://www.typescriptlang.org/">TypeScript</a> Language Services (types,
 jump-to-definition, completion, compiler errors).
 </div>
 
-<div class="site" id="haskell">
-If you are looking for my old <em>Haskell projects</em>, you'll find most of them via
-<a href="http://community.haskell.org/~claus/">my Haskell Community
-page</a>. I also have a <a
-href="http://www.haskellers.com/user/claus/">Haskellers profile</a>.
+<div class="site" id="js-tools">
+I help to manage <strong><a
+href="http://groups.google.com/group/js-tools/about">js-tools</a></strong>, the 
+mailing list for Javascript tool developers, and curate the <strong><a
+href="http://clausreinke.github.com/js-tools/resources.html">js-tools resources</a></strong>.
 </div>
 
 <div class="site" id="blog">
 I do have <a href="http://libraryinstitute.wordpress.com/">a blog</a>,
 but tend to be more active in mailing lists, so my blog is not as busy
-as it should be.  Given that twitter/irc-based folks no longer have the
-patience to read longer emails, that might change;-)
+as it should be.
+</div>
+
+<div class="site" id="haskell">
+If you are looking for my old <em>Haskell projects</em>, you'll find most of them via
+<a href="http://community.haskell.org/~claus/">my Haskell Community
+page</a>. I also have a <a
+href="http://www.haskellers.com/user/claus/">Haskellers profile</a>.
 </div>
 
 <div class="site" id="youtube">
@@ -96,9 +109,9 @@ are available online, as well.
 <p>
 <strong>I am a software toolsmith</strong>. I enjoy writing software that helps
 turning computers into useful tools, with a particular focus on writing tools
-for other software developers - development tools. I have worked with
-Javascript/TypeScript, Haskell, and lots of other programming languages,
-starting from way before there was a web.
+for other software developers - from development tools all the way to
+programming languages. I have worked with Javascript/TypeScript, Haskell, and
+lots of other programming languages, starting from way before there was a web.
 </p>
 <p>
 My interests evolve around <em>(declarative) programming languages</em>:
@@ -144,14 +157,16 @@ language (none of which are helpful when looking at concurrency support).
 It remains to be seen what can be done in terms of improving the Javascript
 language or scaffolding it with tool support (<a
 href="http://clausreinke.github.com/js-tools/resources.html#group:language-extensions">ES6
-modules and classes, as well as types can be supported by transpilers</a>), but
-this is where I would like to focus my efforts in the immediate future. So, <strong>if
+modules and classes, as well as types can be supported by transpilers</a>, so
+2013 will see many of these features used in anger), and this is where I would
+like to focus my efforts in the immediate future. So, <strong>if
 you are looking for a Javascript coder and tool developer with my <a
 href="http://libraryinstitute.wordpress.com/about/">background</a> and
 interests, please <a href="https://github.com/clausreinke">get in touch</a></strong>. If
 you are developing Javascript tools yourself, or want to stay up to date in
 that area, you want to check out our new <a
-href="http://groups.google.com/group/js-tools/about">js-tools</a> group.
+href="http://groups.google.com/group/js-tools/about">js-tools</a> group and its
+<a href="http://clausreinke.github.com/js-tools/resources.html">list of resources</a>.
 </p>
 </article>
 <p>
