--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+  <meta charset="ISO-8859-1"/>
 
   <title>Claus Reinke</title>
 
@@ -10,7 +12,45 @@
   .site  { margin-bottom: 1em }
   #intro { margin-bottom: 1em }
   .clear { clear: both }
+
+  #twitter-widget-1 { width: 75% }
   </style>
+
+  <script>
+  // catch dynamically inserted iframe when its ready and
+  // insert style to hide avatars, fullname and to adjust size
+  // - no fun - why are you holding tweets hostage, twitter??
+  // - these internal details are unlikely to be stable...
+  // - long-term complaints on twitter developers forum
+  // - watch this and give up on timeline embedding if necessary
+  // works in Chrome (28), Opera (12.16), Safari (old);
+  // works unstyled in FireFox (23)
+  function insertStyle(doc,opn) {
+    // console.log("insertStyle",opn);
+    var style = [".avatar, .full-name {display: none}"
+                ,".timeline .stream .tweet,"
+                ,".timeline .stream .tweet .header {padding: 0px 0px 0px 0px}"
+                ,".stream .h-feed li,"
+                ,".p-nickname,"
+                ,".stream time,"
+                ,".timeline .stream .tweet .e-entry-content .e-entry-title {font-size: smaller}"].join("\n");
+    var op = doc[opn];
+    doc[opn] = function() {
+                // console.log(opn,arguments);
+                var res = op.apply(this,arguments);
+                if (arguments[0].id==="twitter-widget-1") {
+                  // console.log("inserting style",arguments[0]);
+                  var ifdoc = arguments[0].contentDocument;
+                  var st = ifdoc.createElement("style");
+                  st.type = "text/css";
+                  (st.styleSheet && (st.styleSheet = style))
+                  || st.appendChild(ifdoc.createTextNode(style));
+                  ifdoc.getElementsByTagName("head")[0].appendChild(st);
+                }
+                return res;
+              };
+  }
+  </script>
 
 </head>
 
@@ -24,12 +64,13 @@
     [<a href="http://community.haskell.org/~claus/talks/">Talks</a>]
     </span>
     <span id="new">
+    [<a href="https://twitter.com/clausreinke">Twitter</a>]
     [<a href="https://github.com/clausreinke">Github Projects</a>]
     [<a href="http://libraryinstitute.wordpress.com/">Blog</a>]
     [<a href="http://www.youtube.com/user/whycombinator">Screencasts</a>]
-    [<a href="https://twitter.com/clausreinke">twitter</a>]
-    <em>(available for work in Germany, or remotely)</em>
     </span>
+    <br>
+    <em id="note">(Javascript specialist, available for work in Germany, or remotely)</em>
     </header>
 
 <div id="content">
@@ -43,30 +84,36 @@ part sites map, part home page:
 <div class="site">
 <em>Recent projects</em> are likely to appear on <a
 href="https://github.com/clausreinke">my Github account</a>.
-Currently, these tend to be <em>Javascript projects</em>,
-such as <strong><a href="https://github.com/clausreinke/estr">estr</a></strong>
-(code traversal, navigation, transformation;
-<a href="http://clausreinke.github.com/estr">online demo</a>).
-</div>
-
-<div class="site" id="ternjs">
-I have been helping out with the Vim plugin for <a
-href="https://github.com/marijnh/tern">Tern</a>, a Javascript analyser for
-intelligent Javascript editing support (types, jump-to-definition, completion,
-documentation lookup, find-references).
+Currently, these tend to be <em>Javascript projects</em> or
+<em>Vim support for Javascript developers</em>.
 </div>
 
 <div class="site" id="typescript-tools">
-I have started work on <strong><a
+I develop <strong><a
 href="https://github.com/clausreinke/typescript-tools">typescript-tools</a></strong>, a
 commandline server and Vim plugin for using <a
-href="http://www.typescriptlang.org/">TypeScript</a> Language Services (types,
-jump-to-definition, completion, compiler errors).
+href="http://www.typescriptlang.org/">TypeScript</a> Language Services
+(<em>types, jump-to-definition, completion, compiler errors</em>).
+</div>
+
+<div class="site" id="tern">
+I have been helping out with the <a
+href="https://github.com/marijnh/tern_for_vim">Vim plugin</a> for <a
+href="https://github.com/marijnh/tern">Tern</a>, a Javascript analyser for
+intelligent Javascript editing support (<em>types, jump-to-definition, completion,
+documentation lookup, find-references, renaming</em>).
+</div>
+
+<div class="site" id="estr">
+Before collaborating on Tern, I used to focus on my own Javascript tooling <strong><a
+href="https://github.com/clausreinke/estr">estr</a></strong> (<em>code
+traversal, navigation, transformation</em>;
+<a href="http://clausreinke.github.com/estr">online demo</a>).
 </div>
 
 <div class="site" id="js-tools">
 I help to manage <strong><a
-href="http://groups.google.com/group/js-tools/about">js-tools</a></strong>, the 
+href="http://groups.google.com/group/js-tools/about">js-tools</a></strong>, the
 mailing list for Javascript tool developers, and curate the <strong><a
 href="http://clausreinke.github.com/js-tools/resources.html">js-tools resources</a></strong>.
 </div>
@@ -105,7 +152,7 @@ are available online, as well.
 
 </div>
 
-<article id="interests">
+<div id="interests">
 <p>
 <strong>I am a software toolsmith</strong>. I enjoy writing software that helps
 turning computers into useful tools, with a particular focus on writing tools
@@ -124,6 +171,7 @@ Occasionally, logic and object-oriented programming also come in handy as
 programming paradigms, but language designs built solely around these two tend
 to be less helpful for general programming.
 </p>
+<!--
 <p>
 If this sounds odd to you, consider <em>embedded domain-specific languages
 and language support for building abstractions</em>: functional abstraction
@@ -133,6 +181,7 @@ logic programming can be supported reasonably well as embedded DSLs,
 while concurrent programming needs language support, and functional
 programming without good functional abstraction is just painful.
 </p>
+-->
 <p>
 On a purely technical basis, I have been tempted to stick with <em>Haskell</em>,
 helping to address its remaining shortcomings. The problem is that this
@@ -140,7 +189,7 @@ ignores social rationales, in particular, what I would call momentum: so
 many developers have been using Java and Php that their needs have
 driven the development of frameworks and tools to ease some of the
 technical disadvantages of the language (the proliferation of frameworks and
-complexity of tools have their own disadvantages). However, there is a storm
+complexity of tools have their own disadvantages). And there is a storm
 brewing here, with <em>Javascript</em> having the potential to reach more
 developers than Java or Php ever had -- and its momentum is building rapidly.
 </p>
@@ -149,17 +198,21 @@ Javascript is not without problems, but it is surprising what one can achieve
 by focussing on the good parts of the language: out of the box, it supports
 functional, object-oriented, and aspect-oriented programming. Its main
 problems are a syntax and APIs that hamper extensive use of functional
-programming, semantics and APIs that hamper equational reasoning, and an
-inertia (the flip side of momentum) that hampers attempts to change the
-language (none of which are helpful when looking at concurrency support).
+programming (instead, it has inherited a focus on assignment, statement blocks
+and built-in control structures), semantics and APIs that hamper equational
+reasoning, and an inertia (the flip side of momentum) that hampers attempts to
+change the language (none of which are helpful when looking at concurrency
+support; even functional programming improvements sometimes encounter
+resistance).
 </p>
 <p>
 It remains to be seen what can be done in terms of improving the Javascript
 language or scaffolding it with tool support (<a
 href="http://clausreinke.github.com/js-tools/resources.html#group:language-extensions">ES6
 modules and classes, as well as types can be supported by transpilers</a>, so
-2013 will see many of these features used in anger), and this is where I would
-like to focus my efforts in the immediate future. So, <strong>if
+2013 will see many of these features used in anger; sadly, the spec has lagged
+behind implementations, so the two are sometimes out of sync). This is
+where I would like to focus my efforts in the immediate future. <strong>If
 you are looking for a Javascript coder and tool developer with my <a
 href="http://libraryinstitute.wordpress.com/about/">background</a> and
 interests, please <a href="https://github.com/clausreinke">get in touch</a></strong>. If
@@ -168,8 +221,21 @@ that area, you want to check out our new <a
 href="http://groups.google.com/group/js-tools/about">js-tools</a> group and its
 <a href="http://clausreinke.github.com/js-tools/resources.html">list of resources</a>.
 </p>
-</article>
-<p>
+
+<p id="twitter-container">
+<strong>Recent Tweets</strong>
+<a href="https://twitter.com/clausreinke" class="twitter-follow-button" data-show-count="false" data-dnt="true">Follow @clausreinke</a>
+<a class="twitter-timeline" data-chrome="nofooter noheader noborders transparent" data-tweet-limit="4" data-dnt="true" href="https://twitter.com/clausreinke"  data-widget-id="358230282421280771">Tweets by @clausreinke</a>
+</p>
+<script>
+insertStyle(document.getElementById("twitter-container"),"replaceChild");
+insertStyle(document.getElementById("twitter-container"),"insertBefore"); // this one, atm...
+insertStyle(document.getElementById("twitter-container"),"appendChild");
+</script>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+</div>
+
 
 </div>
 
