add list of projects

--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@
     [<a href="http://community.haskell.org/~claus/talks/">Talks</a>]
     </span>
     <span id="new">
+    [<a href="https://clausreinke.github.com/">Home</a>]
+    [<a href="https://clausreinke.github.com/projects.html">Projects</a>]
     [<a href="https://twitter.com/clausreinke">Twitter</a>]
-    [<a href="https://github.com/clausreinke">Github Projects</a>]
+    [<a href="https://github.com/clausreinke">Github</a>]
     [<a href="http://libraryinstitute.wordpress.com/">Blog</a>]
     [<a href="http://www.youtube.com/user/whycombinator">Screencasts</a>]
     </span>
@@ -82,7 +84,7 @@ part sites map, part home page:
 </div>
 
 <div class="site">
-<em>Recent projects</em> are likely to appear on <a
+<em><a href="projects.html">Recent projects</a></em> are likely to appear on <a
 href="https://github.com/clausreinke">my Github account</a>.
 Currently, these tend to be <em>Javascript projects</em> or
 <em>Vim support for Javascript developers</em>.
