--- a/projects.html
+++ b/projects.html
@@ -172,7 +172,7 @@
   relative to font size, can be zoomed to adapt to device or window dimensions.
   </p>
   </div>
-  <img src="images/sudoku.PNG"/>
+  <img src="images/sudoku.png"/>
 </div>
 
 <div class="project" id="cross-and-circle">
@@ -190,7 +190,7 @@
   communication uses JSON via AJAX (XmlHttpRequest) / Comet (longpolling).
   </p>
   </div>
-  <img src="images/cross-and-circle.PNG"/>
+  <img src="images/cross-and-circle.png"/>
 </div>
 
 <div class="project" id="module-loader">
