list a few old languages;link to netedit wip

--- a/index.html
+++ b/index.html
@@ -118,8 +118,12 @@ activity recently.
 <strong>I am a software toolsmith</strong>. I enjoy writing software that helps
 turning computers into useful tools, with a particular focus on writing tools
 for other software developers - from development tools all the way to
-programming languages. I have worked with Javascript/TypeScript, Haskell, and
-lots of other programming languages, starting from way before there was a web.
+programming languages. I have worked with Javascript/TypeScript (~4yrs/2yrs),
+Haskell (~14yrs), and more other programming languages than I can remember
+(past intensively used languages include C ~8yrs, Java, Perl, ...; on smaller
+scale, I also used languages like Prolog, Lisp, Erlang, ...), starting from way
+before there was a web (my first languages were Homecomputer Basic and Z80
+Assembly).
 </p>
 <p>
 My <a href="projects.html">recent projects</a> tend to be <em>Javascript
