--- a/projects.html
+++ b/projects.html
@@ -88,7 +88,7 @@
 <div class="project" id="petrinets">
   <div class="description">
   <h2>
-  JavaScript Petri Nets
+  <a href="https://github.com/clausreinke/netedit">JavaScript Petri Nets</a>
   </h2>
   <em>(status: work in progress, unpublished)</em>
 
