--- a/index.html
+++ b/index.html
@@ -51,16 +51,8 @@ I develop <strong><a
 href="https://github.com/clausreinke/typescript-tools">typescript-tools</a></strong>, a
 commandline server and Vim plugin for using <a
 href="http://www.typescriptlang.org/">TypeScript</a> Language Services
-(<em>types, jump-to-definition, completion, compiler errors</em>).
-</div>
-
-<div class="site" id="tern">
-I have been helping out with the <a
-href="https://github.com/marijnh/tern_for_vim">Vim plugin</a> for
-Marijn Haverbeke's <a
-href="https://github.com/marijnh/tern">Tern</a>, a Javascript analyser for
-intelligent Javascript editing support (<em>types, jump-to-definition, completion,
-documentation lookup, find-references, renaming</em>).
+(<em>types, jump-to-definition, completion, compiler errors</em>). Others have used this
+to build TypeScript plugins for Emacs and Sublime.
 </div>
 
 <!--
@@ -75,8 +67,15 @@ documentation lookup, find-references, renaming</em>).
 <div class="site" id="js-tools">
 I help to manage <strong><a
 href="http://groups.google.com/group/js-tools/about">js-tools</a></strong>, the
-mailing list for Javascript tool developers, and its <strong><a
-href="http://clausreinke.github.com/js-tools/resources.html">list of resources</a></strong>.
+mailing list for Javascript tool developers.
+</div>
+
+<div class="site" id="tern">
+I helped out with the <a href="https://github.com/marijnh/tern_for_vim">Vim
+plugin</a> for Marijn Haverbeke's <a
+href="https://github.com/marijnh/tern">Tern</a>, a Javascript analyser for
+intelligent Javascript editing support (<em>types, jump-to-definition, completion,
+documentation lookup, find-references, renaming</em>).
 </div>
 
 <div class="site" id="haskell">
@@ -99,10 +98,10 @@ embedded DSL</a>.
 </div>
 
 <div class="site" id="publications">
-Many of my older <a
+I also used to be an academic researcher. Many of my older <a
 href="http://community.haskell.org/~claus/publications/">publications</a>
 and <a href="http://community.haskell.org/~claus/talks/">talks</a>
-are available online, as well.
+are available online.
 </div>
 
 <div class="site" id="blog">
@@ -154,11 +153,11 @@ activity.
 Javascript is not without problems, but it is surprising what one can achieve
 by focussing on the good parts of the language: out of the box, it supports
 functional, object-oriented, and aspect-oriented programming. Its main
-problems are a syntax and APIs that hamper extensive use of functional
-programming (instead, it has inherited a focus on assignment, statement blocks
-and built-in control structures), semantics and APIs that hamper equational
-reasoning, and an inertia (the flip side of momentum) that hampers attempts to
-change the language (none of which are helpful when looking at concurrency
+problems are syntax, semantics and APIs that hamper extensive use of functional
+programming or equational reasoning (instead, it has inherited a focus on
+side-effects, statement blocks and built-in control structures), and an inertia
+(the flip side of momentum) that hampers and occasionally misdirects attempts
+to change the language (none of which are helpful when looking at concurrency
 support; even functional programming improvements sometimes encounter
 resistance).
 It remains to be seen what can be done in terms of improving the Javascript
