--- a/index.html
+++ b/index.html
@@ -24,11 +24,19 @@
 
     <div id="news">
     <span class="title">News</span>
-      <br>
+      <p>
+      <strong>typescript-tools v0.4.x</strong> in testing (commandline access to
+      TypeScript language services, basis of Vim/Emacs/Sublime plugins), supporting
+      TypeScript v1.4.x.
+      [<a href="https://github.com/clausreinke/typescript-tools/issues/39">tracking issue</a>]
+      [<a href="https://github.com/clausreinke/typescript-tools/tree/testing_ts1.4">testing branch</a>]
+      </p>
+      <p>
       <strong>typescript-tools v0.3.1</strong> released (commandline access to
       TypeScript language services, basis of Vim/Emacs/Sublime plugins)
       [<a href="https://www.npmjs.org/package/typescript-tools">npm</a>]
       [<a href="https://github.com/clausreinke/typescript-tools">github</a>]
+      </p>
     </div>
     <span id="new">
     [<a href="https://clausreinke.github.com/">Home</a>]
