emphasize project status

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ Assembly).
 My <a href="projects.html">recent projects</a> tend to be <em>Javascript
 projects</em> or <em>Vim support for Javascript and TypeScript developers</em>
 or WebApp-related technology experiments.  Their sources are likely to appear
-on <a href="https://github.com/clausreinke">my Github account</a>.
+on my Github account.
 </p>
 <p>
 My interests evolve around <em>(declarative) programming languages</em>:
