drop mention of tern; inline bits of background

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ href="http://groups.google.com/group/js-tools/about">js-tools</a></strong>, the
 mailing list for Javascript tool developers.
 </div>
 
+<!--
 <div class="site" id="tern">
 I helped out with the <a href="https://github.com/marijnh/tern_for_vim">Vim
 plugin</a> for Marijn Haverbeke's <a
@@ -85,6 +86,7 @@ href="https://github.com/marijnh/tern">Tern</a>, a Javascript analyser for
 intelligent Javascript editing support (<em>types, jump-to-definition, completion,
 documentation lookup, find-references, renaming</em>).
 </div>
+-->
 
 <div class="site" id="haskell">
 In a previous life, I used to be a <a href="http://www.haskellers.com/user/claus/">Haskeller</a>.
@@ -114,8 +116,8 @@ are available online.
 
 <div class="site" id="blog">
 I do have <a href="http://libraryinstitute.wordpress.com/">a blog</a>,
-but tend to be more active in mailing lists, so my blog has not seen much
-activity recently.
+but tend to be more active in mailing lists and issue trackers, so my blog has
+not seen much activity recently.
 </div>
 
 </div>
@@ -130,7 +132,9 @@ Haskell (~14yrs), and more other programming languages than I can remember
 (past intensively used languages include C ~8yrs, Java, Perl, ...; on smaller
 scale, I also used languages like Prolog, Lisp, Erlang, ...), starting from way
 before there was a web (my first languages were Homecomputer Basic and Z80
-Assembly).
+Assembly). I have been on the web since before the internet archive started,
+though I've mostly seen it more as a way to distribute content than as something
+to play around with (so please pardon my lack of fancy design/animations/etc:-).
 </p>
 <p>
 My <a href="projects.html">recent projects</a> tend to be <em>Javascript
@@ -173,7 +177,7 @@ experience by scaffolding it with tool support.
 </p>
 <p>
 <strong>If you are looking for a Javascript coder and tool developer with my <a
-href="http://libraryinstitute.wordpress.com/about/">background</a> and
+href="aboutme.html">background</a> and
 interests, please <a href="https://github.com/clausreinke">get in
 touch</a></strong>.
 </p>
