focus news on typescript-tools TSv1.5 testing

--- a/aboutme.html
+++ b/aboutme.html
@@ -47,6 +47,7 @@ Among other things, I have
 <li>studied first-class module systems and other ways of program-controlled modularity inside a functional language, long before that became a topic in JS</li>
 <li>taught advanced project courses on 'System Modeling with Petri Nets' to MSc CS students</li>
 <li>worked on integrating logic programming ideas into a functional programming language</li>
+<li>implemented a couple of functional programming languages, and added features to a couple more fpl implementations</li>
 </ul>
 </p>
 
