news: typescript-tools and typescript-tools.vim

--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
     <div id="news">
     <span class="title">News</span>
       <p>
-      <strong>typescript-tools v0.4.x</strong> in testing (commandline access to
-      TypeScript language services, basis of Vim/Emacs/Sublime plugins), supporting
-      TypeScript v1.5.x. <em>(NOTE: this is still on a separate branch because of
-      the TSv1.5 dependency)</em>
-      [<a href="https://github.com/clausreinke/typescript-tools/issues/39">tracking issue</a>]
-      [<a href="https://github.com/clausreinke/typescript-tools/tree/testing_ts1.4">testing branch</a>]
+      <strong><a
+      href="https://github.com/clausreinke/typescript-tools">typescript-tools
+      v0.4.6-testing-ts1.5</a></strong> available for testing (commandline
+      access to TypeScript language services, basis of Vim/Emacs/Sublime
+      plugins), supporting TypeScript v1.5.0-alpha.
+      </p>
+      <strong><a
+      href="https://github.com/clausreinke/typescript-tools.vim">typescript-tools.vim</a></strong>
+      available for testing (Vim plugin for typescript-tools), supporting
+      TypeScript v1.5.0-alpha.
       </p>
       <!--
       <p>
