projects: typescript-tools repo split

--- a/projects.html
+++ b/projects.html
@@ -43,6 +43,8 @@
   <div class="description">
   <h2>
   <a href="https://github.com/clausreinke/typescript-tools">typescript-tools</a>
+  and
+  <a href="https://github.com/clausreinke/typescript-tools.vim">typescript-tools.vim</a>
   </h2>
   <em class="status">(status: active)</em>
 
