update typescript-tools to 0.4.7 (TSv1.5.0-beta)

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <p>
       <strong><a
       href="https://github.com/clausreinke/typescript-tools">typescript-tools
-      v0.4.6-testing-ts1.5</a></strong> available for testing (commandline
-      access to TypeScript language services, basis of Vim/Emacs/Sublime
-      plugins), supporting TypeScript v1.5.0-alpha.
+      v0.4.7</a></strong> available for testing (commandline access to
+      TypeScript language services, basis of Vim/Emacs/Sublime plugins),
+      supporting TypeScript v1.5.0-beta.
       </p>
       <strong><a
       href="https://github.com/clausreinke/typescript-tools.vim">typescript-tools.vim</a></strong>
       available for testing (Vim plugin for typescript-tools), supporting
-      TypeScript v1.5.0-alpha.
+      TypeScript v1.5.0-beta.
       </p>
       <!--
       <p>
