update project status

--- a/projects.html
+++ b/projects.html
@@ -80,7 +80,7 @@
   <h2>
   <a href="https://github.com/clausreinke/netedit">JavaScript Petri Nets</a>
   </h2>
-  <em class="status">(status: work in progress, unpublished)</em>
+  <em class="status">(status: work in progress, unpublished, not recently active)</em>
 
   <p>
   SVG-based in-browser editor and simulator for Coloured Petri Nets with JavaScript
@@ -105,7 +105,7 @@
   <h2>
   <a href="http://clausreinke.github.com/js-tools/resources.html">Javascript development tools - resources</a>
   </h2>
-  <em class="status">(status: list active, resources need review)</em>
+  <em class="status">(status: list active, resources inactive, need review)</em>
   <p>
   We started the <a
   href="https://groups.google.com/forum/#!aboutgroup/js-tools">js-tools mailing
