--- a/index.html
+++ b/index.html
@@ -62,12 +62,13 @@
 <div id="sites">
 
 <div class="site" id="typescript-tools">
-I develop <strong><a
-href="https://github.com/clausreinke/typescript-tools">typescript-tools</a></strong>, a
-commandline server and Vim plugin for using <a
-href="http://www.typescriptlang.org/">TypeScript</a> Language Services
-(<em>types, jump-to-definition, completion, compiler errors</em>). Others have used this
-to build TypeScript plugins for Emacs and Sublime.
+I develop <strong>typescript-tools</strong>, a <a
+href="https://github.com/clausreinke/typescript-tools">commandline server</a>
+and <a href="https://github.com/clausreinke/typescript-tools.vim">Vim
+plugin</a> for using <a href="http://www.typescriptlang.org/">TypeScript</a>
+Language Services (<em>types, jump-to-definition, completion, compiler
+errors</em>). Others have used this to build TypeScript plugins for Emacs and
+Sublime.
 </div>
 
 <!--
