add ISBN project

--- a/projects.html
+++ b/projects.html
@@ -71,6 +71,25 @@
   <img src="images/typescript-tools.PNG"/>
 </div>
 
+
+<div class="project" id="isbn">
+  <div class="description">
+  <h2>
+  ISBN book organizer
+  </h2>
+  <em class="status">(status: active, new project)</em>
+
+  <p>
+  Partly a technology experiment, to learn about working with Ionic, Angular
+  and Cordova (barcode scanner and SQLite plugins) on Android. Also intended
+  for home use (scan book ISBN barcode, lookup general book info from some
+  remote source, edit/augment with local info, store in local database).
+  </p>
+  </div>
+
+  <img src="images/ISBN.png">
+</div>
+
 </div>
 
 <div id="offandon">
