add ISBN project url

--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
 <div class="project" id="isbn">
   <div class="description">
   <h2>
-  ISBN book organizer
+  <a href="https://github.com/clausreinke/ISBN">ISBN book organizer</a>
   </h2>
   <em class="status">(status: active, new project)</em>
 
