move ISBN to offandon status

--- a/projects.html
+++ b/projects.html
@@ -71,13 +71,16 @@
   <img src="images/typescript-tools.PNG"/>
 </div>
 
+</div>
+
+<div id="offandon">
 
 <div class="project" id="isbn">
   <div class="description">
   <h2>
   <a href="https://github.com/clausreinke/ISBN">ISBN book organizer</a>
   </h2>
-  <em class="status">(status: active, new project)</em>
+  <em class="status">(status: not recently active, technology experiment)</em>
 
   <p>
   Partly a technology experiment, to learn about working with Ionic, Angular
@@ -89,10 +92,6 @@
 
   <img src="images/ISBN.png">
 </div>
-
-</div>
-
-<div id="offandon">
 
 <div class="project" id="petrinets">
   <div class="description">
