updated typescript-tools and typescript-tools.vim

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       <p>
       <strong><a
       href="https://github.com/clausreinke/typescript-tools">typescript-tools
-      v0.4.7</a></strong> available for testing (commandline access to
+      v0.7.0</a></strong> available for testing (commandline access to
       TypeScript language services, basis of Vim/Emacs/Sublime plugins),
-      supporting TypeScript v1.5.0-beta.
+      supporting TypeScript v1.8.10.
       </p>
       <strong><a
       href="https://github.com/clausreinke/typescript-tools.vim">typescript-tools.vim</a></strong>
       available for testing (Vim plugin for typescript-tools), supporting
-      TypeScript v1.5.0-beta.
+      TypeScript v1.8.10.
       </p>
       <!--
       <p>
